Реализован вывод номеров строк с найденными вхождениями искомой строки

--- a/lab1/findtext/findtext/findtext.vcxproj
+++ b/lab1/findtext/findtext/findtext.vcxproj
@@ -154,6 +154,7 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <Text Include="readme-Project.txt" />
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
