Реализован и протестирован вывод номеров строк со всеми вхождениями искомой строки

--- a/lab1/findtext/findtext/findtext.vcxproj.filters
+++ b/lab1/findtext/findtext/findtext.vcxproj.filters
@@ -17,6 +17,7 @@
   <ItemGroup>
     <Text Include="ReadMe.txt" />
     <Text Include="readme-Project.txt" />
+    <Text Include="readme-findtext.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
