Рефакторинг кода, добавлены новые тесты

--- a/lab1/invert/Invert/Invert.vcxproj
+++ b/lab1/invert/Invert/Invert.vcxproj
@@ -41,7 +41,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v120</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
@@ -109,6 +109,9 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <PostBuildEvent>
+      <Command>test.bat "$(TargetPath)"</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -147,6 +150,8 @@
   <ItemGroup>
     <Text Include="answer1.txt" />
     <Text Include="answer2.txt" />
+    <Text Include="invalid_arguments_count.txt" />
+    <Text Include="readme-notexist.txt" />
     <Text Include="ReadMe.txt" />
     <Text Include="result.txt" />
     <Text Include="test1.txt" />
