--- a/lab2/PrimeGenerator/PrimeGenerator/PrimeGenerator.vcxproj
+++ b/lab2/PrimeGenerator/PrimeGenerator/PrimeGenerator.vcxproj
@@ -81,6 +81,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>C:\boost\boost_1_63_0\boost_1_63_0;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
